@@ -143,6 +143,7 @@ Ignacio Coloma
 Ingenonsya France
 Ingmar Stein
 Irene Rusman
+Isaac Shabtay
 Ivan Ivanov
 J Bleijenbergh
 Jack J. Woehr
@@ -335,6 +336,7 @@ Steve Loughran
 Steve Morin
 Steve Wadsworth
 Steven E. Newton
+Sudheer Chigurupati
 Takashi Okamoto
 TAMURA Kent
 Taoufik Romdhane
