@@ -597,6 +597,10 @@
     <last>Rusman</last>
   </name>
   <name>
+    <first>Isaac</first>
+    <last>Shabtay</last>
+  </name>
+  <name>
     <first>Ivan</first>
     <last>Ivanov</last>
   </name>
@@ -1346,6 +1350,10 @@
     <first>Steven</first>
     <middle>E.</middle>
     <last>Newton</last>
+  </name>
+  <name>
+    <first>Sudheer</first>
+    <last>Chigurupati</last>
   </name>
   <name>
     <first>Takashi</first>
