@@ -116,6 +116,12 @@ and won't work with versions of jsch earlier than
      <td valign="top" align="center">No, defaults to an empty string.</td>
   </tr>
   <tr>
+    <td valign="top">suppresssystemout</td>
+    <td valign="top">Whether to suppress system out.
+      <em>since Ant 1.9.0</em></td>
+    <td align="center" valign="top">No, defaults to false</td>
+  </tr>
+  <tr>
     <td valign="top">output</td>
     <td valign="top">Name of a file to which to write the output.</td>
     <td align="center" valign="top">No</td>
